# c_torch

./: .gitignore  CMakeLists.txt  test.py
examples/: 1_5_dumb_autoencoder.cpp  1_dumb_autoencoder.py  2_0_digits.cpp  2_digits.cpp  3_transforms.cpp  test.cpp
scripts/: build.py  setup_libs.py
src/: main.cpp
src/activation/: softmax.h  tanh.h
src/containers/: module.h  sequential.cpp  sequential.h
src/functional/: loss.cpp  loss.h
src/linear/: linear.cpp  linear.h
src/nn/activation/: relu.h  softmax.h  tanh.h
src/nn/containers/: module.cpp  module.h  sequential.cpp  sequential.h
src/nn/convolution/: conv_2d.cpp  conv_2d.h
src/nn/dropout/: dropout.cpp  dropout.h
src/nn/functional/: loss.cpp  loss.h  tensor_func.cpp  tensor_func.h
src/nn/linear/: linear.cpp  linear.h
src/nn/optim/: adam.cpp  adam.h  optimizer.h  sgd.h
src/nn/pooling/: max_pool_2d.cpp  max_pool_2d.h
src/optim/: optimizer.h  sgd.h
src/tensor/: tensor.cpp  tensor.h  tensor_create.cpp  tensor_create.h  tensor_func.cpp  tensor_func.h  tensor_utils.cpp  tensor_utils.h
src/tensor/variable/: variable.cpp  variable.h  variable_func.cpp  variable_func.h
src/utils/data/: csv_reader.cpp  csv_reader.h
src/vision/: transforms.cpp  transforms.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_main.cpp
tests/nn_tests/activation_tests/: relu_tests.cpp  softmax_tests.cpp
tests/nn_tests/activation_tests.cpp/: softmax_tests.cpp
tests/nn_tests/functional_tests/: loss_tests.cpp
tests/tensor_tests/: tensor_func_tests.cpp  tensor_tests.cpp  tensor_utils.cpp  tensor_utils.h  tensor_utils_tests.cpp
